--- a/app/src/main/res/layout/activity_crud_profesor_edit.xml
+++ b/app/src/main/res/layout/activity_crud_profesor_edit.xml
@@ -53,6 +53,19 @@
             android:background="#FFE0B2"
             android:layout_marginBottom="16dp" />
 
+        <!-- 📧 Correo solo lectura -->
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tvCorreoProf"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Correo:"
+            android:textSize="14sp"
+            android:textColor="#000000"
+            android:padding="10dp"
+            android:background="#FFF3E0"
+            android:layout_marginBottom="14dp"
+            android:gravity="center_vertical" />
+
         <!-- Nombre -->
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
@@ -101,6 +114,7 @@
                 android:inputType="textPersonName" />
         </com.google.android.material.textfield.TextInputLayout>
 
+
         <!-- Cursos asignados (multi selección) -->
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tv_curso_prof_label"
@@ -133,12 +147,11 @@
             android:textSize="13sp"
             android:layout_marginTop="4dp"
             android:layout_marginBottom="10dp" />
-
-        <!-- Correo -->
+        <!-- Contraseña -->
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
+            android:layout_height="50dp"
+            android:layout_marginBottom="8dp"
             app:boxBackgroundColor="#FFFFFF"
             app:boxBackgroundMode="outline"
             app:boxCornerRadiusBottomEnd="12dp"
@@ -148,9 +161,16 @@
             app:boxStrokeColor="#000000"
             app:boxStrokeWidth="1dp"
             app:boxStrokeWidthFocused="2dp"
-            app:hintTextColor="#000000"/>
+            app:endIconMode="password_toggle"
+            app:hintTextColor="#000000">
 
-        <!-- Contraseña -->
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/txt_contrasena_profesor"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="Contraseña"
+                android:inputType="textPassword" />
+        </com.google.android.material.textfield.TextInputLayout>
 
         <!-- Texto de ayuda -->
         <com.google.android.material.textview.MaterialTextView
