--- a/app/src/main/res/layout/activity_bienvenida_screen_profe.xml
+++ b/app/src/main/res/layout/activity_bienvenida_screen_profe.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/backgroundventanas"
-    tools:context=".bienvenidaScreenProfe">
+    tools:context=".Main.Bienvenidas.bienvenidaScreenProfe">
 
     <LinearLayout
         android:id="@+id/main_container"
