--- a/app/src/main/res/layout/activity_crud_administrador.xml
+++ b/app/src/main/res/layout/activity_crud_administrador.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/backgroundventanas"
-    tools:context=".crudAdmin.crudAdministrador">
+    tools:context=".AdminMenu.CrudAdmin.crudAdministrador">
 
     <LinearLayout
         android:id="@+id/main_container_admin"
