--- a/app/src/main/res/layout/activity_crud_administrador_editar.xml
+++ b/app/src/main/res/layout/activity_crud_administrador_editar.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/backgroundventanas"
-    tools:context=".crudAdmin.crudAdministradorEditar">
+    tools:context=".CrudAdmin.crudAdministradorEditar">
 
     <LinearLayout
         android:id="@+id/main_container_admin"
