--- a/app/src/main/res/layout/activity_crud_profesor_edit.xml
+++ b/app/src/main/res/layout/activity_crud_profesor_edit.xml
@@ -6,7 +6,7 @@
     android:id="@+id/login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EditCrud.crudProfesorEdit"
+    tools:context=".AdminMenu.EditCrudAdmin.crudProfesorEdit"
     android:background="@drawable/backgroundventanas">
 
     <LinearLayout
