--- a/app/src/main/res/layout/activity_crud_registro.xml
+++ b/app/src/main/res/layout/activity_crud_registro.xml
@@ -6,7 +6,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".crud_registro"
+    tools:context=".Main.crud_registro"
     android:background="@drawable/backgroundventanas">
 
     <LinearLayout
