--- a/app/src/main/res/layout/activity_listcrud_alumno.xml
+++ b/app/src/main/res/layout/activity_listcrud_alumno.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/backgroundventanas"
-    tools:context=".EditCrud.listcrudAlumno">
+    tools:context=".AdminMenu.ListCrudAdmin.listcrudAlumno">
 
     <LinearLayout
         android:id="@+id/main_container_list_alumno"
