--- a/app/src/main/res/layout/activity_listcrud_roles.xml
+++ b/app/src/main/res/layout/activity_listcrud_roles.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/backgroundventanas"
-    tools:context=".EditCrud.listcrudRoles">
+    tools:context=".AdminMenu.ListCrudAdmin.listcrudRoles">
 
     <LinearLayout
         android:id="@+id/main_container_list_roles"
