--- a/app/src/main/res/layout/activity_math_quiz.xml
+++ b/app/src/main/res/layout/activity_math_quiz.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/backgroundventanas"
-    tools:context=".mathQuiz">
+    tools:context=".MenuAlumno.mathQuiz">
 
     <LinearLayout
         android:id="@+id/main_container"
