--- a/app/src/main/res/layout/activity_menu_admin.xml
+++ b/app/src/main/res/layout/activity_menu_admin.xml
@@ -6,7 +6,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".menuAdmin"
+    tools:context=".Main.menuAdmin"
     android:background="@drawable/backgroundventanas">
 
     <LinearLayout
