--- a/app/src/main/res/layout/activity_menu_profesor.xml
+++ b/app/src/main/res/layout/activity_menu_profesor.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/backgroundventanas"
-    tools:context=".menuProfesor">
+    tools:context=".Main.menuProfesor">
 
     <LinearLayout
         android:id="@+id/main_container_menu_profe"
