--- a/app/src/main/res/layout/activity_ranking.xml
+++ b/app/src/main/res/layout/activity_ranking.xml
@@ -6,7 +6,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Ranking"
+    tools:context=".MenuAlumno.Ranking"
     android:background="@drawable/backgroundventanas">
 
     <LinearLayout
