--- a/app/src/main/res/layout/activity_screen_apodo.xml
+++ b/app/src/main/res/layout/activity_screen_apodo.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/backgroundventanas"
-    tools:context=".ScreenApodo">
+    tools:context=".MenuAlumno.ScreenApodo">
 
     <LinearLayout
         android:id="@+id/main_container"
